# fluffwire-app

./: .env.production  .gitignore  BACKEND_REQUIREMENTS.md  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.app.json  vitest.config.ts
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: claude-code-review.yml  claude.yml  release.yml  test.yml
docs/: WEBHOOKS.md  deployment.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/__tests__/: setup.ts
src/composables/: useAuth.ts  useContextMenu.ts  useIdleDetection.ts  useImageUrl.ts  useInfiniteScroll.ts  useMarkdown.ts  useNotifications.ts  useResponsive.ts  useSounds.ts  useSwipePanel.ts  useTheme.ts  useTypingIndicator.ts  useVoice.ts  useWebSocket.ts
src/constants/: channelAccess.ts  endpoints.ts  events.ts  permissions.ts  tiers.ts
src/data/: emojiShortcodes.ts
src/i18n/: index.ts
src/layouts/: AppLayout.vue  AuthLayout.vue
src/router/: guards.ts  index.ts
src/services/: api.ts  authApi.ts  botApi.ts  bugApi.ts  channelAccessApi.ts  channelApi.ts  commandApi.ts  desktopNotifications.ts  emailApi.ts  friendApi.ts  messageApi.ts  passwordResetApi.ts  serverApi.ts  tokenStorage.ts  updater.ts  userApi.ts  webrtc.ts  websocket.ts  wsDispatcher.ts
src/stores/: auth.ts  bots.ts  channels.ts  commands.ts  directMessages.ts  drafts.ts  friends.ts  labels.ts  members.ts  messages.ts  (+9 more)
(+116 files in other folders)
